Uninstalled live server

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Brian Mac</title>
 </head>
 <body>
-    <h1>Under Construction :(</h1>
+    <h1 class="text-xl font-semibold">Under Construction :(</h1>
 </body>
 </html>
