--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="output.css" rel="stylesheet">
+    <link href="globals.css" rel="stylesheet">
     <title>Brian Mac</title>
 </head>
 <body>
-    <h1 class="text-xl font-semibold">Under Construction :(</h1>
+    <div class="flex">
+        <h1 class="text-xl font-semibold">Under Construction</h1>
+    </div>
 </body>
 </html>
