--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -8,8 +8,8 @@
     <title>Brian Mac</title>
 </head>
 <body>
-    <div class="flex justify-center items-center h-screen">
-        <h1 class="text-xl font-semibold">Under Construction</h1>
+    <div class="flex">
+        
     </div>
 </body>
 </html>
