Attempted fix at Tailwind not working

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <div class="flex justify-center items-center h-screen">
         <h1 class="text-xl font-semibold">Under Reconstruction</h1>
     </div>
+
+    <script src="./index.js" type="module"></script>
 </body>
 </html>
