--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./tailwind.css" rel="stylesheet">
     <link href="./globals.css" rel="stylesheet">
     <title>Brian Mac</title>
 </head>
