Added link to LinkedIn

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Brian Mac</title>
 </head>
 <body>
-    <div class="flex justify-center items-center h-screen">
+    <div class="flex flex-col justify-center items-center h-screen">
         <h1 class="text-xl font-semibold">Under Reconstruction</h1>
+        <a href="https://www.linkedin.com/in/brianmac97/">Check out my LinkedIn in the meanwhile</p>
     </div>
 
     <script src="./index.js" type="module"></script>
