--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="flex flex-col justify-center items-center h-screen">
         <h1 class="text-xl font-semibold">Under Reconstruction</h1>
-        <a href="https://www.linkedin.com/in/brianmac97/">Check out my LinkedIn in the meanwhile</p>
+        <a href="https://www.linkedin.com/in/brianmac97/">Check out my LinkedIn in the meanwhile</a>
     </div>
 
     <script src="./index.js" type="module"></script>
