--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./output.css" rel="stylesheet">
-    <link href="./globals.css" rel="stylesheet">
+    <link href="../dist/css/output.css" rel="stylesheet">
+    <link href="css/globals.css" rel="stylesheet">
     <title>Brian Mac</title>
 </head>
 <body>
@@ -13,6 +13,6 @@
         <a href="https://www.linkedin.com/in/brianmac97/">Check out my LinkedIn in the meanwhile</a>
     </div>
 
-    <script src="./index.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
 </body>
 </html>
