--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../dist/css/tailwind.css" rel="stylesheet">
-    <link href="css/globals.css" rel="stylesheet">
+    <link href="./dist/css/tailwind.css" rel="stylesheet">
+    <link href="./src/css/globals.css" rel="stylesheet">
     <title>Brian Mac</title>
 </head>
 <body>
     <div class="flex flex-col justify-center items-center h-screen">
         <h1 class="text-xl font-semibold">Under Reconstruction</h1>
-        <a class="text-2xl" href="https://www.linkedin.com/in/brianmac97/">Check out my LinkedIn in the meanwhile</a>
+        <a href="https://www.linkedin.com/in/brianmac97/">Check out my LinkedIn in the meanwhile</a>
     </div>
 
     <script src="js/index.js" type="module"></script>
