--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
     <title>Brian Mac</title>
 </head>
 <body>
-    <div class="flex">
-        <div id="nav" class="flex flex-col">
-
+    <div class="w-19/20 mx-auto">
+        <div class="flex relative">
+            <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6">
+                
+            </div>
         </div>
-    </div>
+    </div>   
 
     <script src="js/index.js" type="module"></script>
 </body>
