--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../src/css/output.css" rel="stylesheet">
     <link href="../src/css/globals.css" rel="stylesheet">
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <title>Brian Mac</title>
 </head>
 <body>
