--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,7 @@
 <body>
     <div class="w-19/20 mx-auto">
         <div class="flex relative">
-            <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6">
-                
-            </div>
+            <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6"></div>
         </div>
     </div>   
 
