Made edits to main column

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,17 @@
     <div class="w-19/20 mx-auto">
         <div class="flex relative">
             <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6"></div>
+            <div id="main" class="flex-1 ml-60">
+                <div class="flex flex-col gap-8 py-6">
+                    <h6 class="text-xl">Co-Founder & Product Designer at Tooni</h6>
+                    <h1 class="text-5xl font-semibold pt-8 pb-24">
+                        I design products, interfaces, & experiences.
+                        <strong class="font-semibold text-bk-32">
+                            Combining creativity with user-centric design principles to craft products that captivate users and elevate their digital experience.
+                        </strong>                     
+                    </h1>
+                </div>
+            </div>
         </div>
     </div>   
 
