--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,50 @@
                             Combining creativity with user-centric design principles to craft products that captivate users and elevate their digital experience.
                         </strong>                     
                     </h1>
+                    <div class="flex gap-8">
+                        <a href class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
+                            <img class="w-4/5 object-cover py-16"
+                                src="">
+                            <div class="flex flex-col gap-4 w-full px-12 pb-12">
+                                <h5 class="text-2xl font-semibold">Tooni</h5>
+                                <div class="flex flex-wrap gap-2">
+                                    <thumbnail-pill>
+                                        <p class="text-sm text-wh">Founder</p>
+                                    </thumbnail-pill>
+                                    <thumbnail-pill>
+                                        <p class="text-sm text-wh">Fintech</p>
+                                    </thumbnail-pill>
+                                    <thumbnail-pill>
+                                        <p class="text-sm text-wh">B2C</p>
+                                    </thumbnail-pill>
+                                    <thumbnail-pill>
+                                        <p class="text-sm text-wh">Personal Finance</p>
+                                    </thumbnail-pill>
+                                </div>
+                            </div>
+                        </a>
+                        <a href class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
+                            <img class="w-4/5 object-cover py-16"
+                                src="">
+                            <div class="flex flex-col gap-4 w-full px-12 pb-12">
+                                <h5 class="text-2xl font-semibold">Midaflow</h5>
+                                <div class="flex flex-wrap gap-2">
+                                    <thumbnail-pill>
+                                        <p class="text-sm text-wh">Internship</p>
+                                    </thumbnail-pill>
+                                    <thumbnail-pill>
+                                        <p class="text-sm text-wh">Fintech</p>
+                                    </thumbnail-pill>
+                                    <thumbnail-pill>
+                                        <p class="text-sm text-wh">B2B</p>
+                                    </thumbnail-pill>
+                                    <thumbnail-pill>
+                                        <p class="text-sm text-wh">ERP System</p>
+                                    </thumbnail-pill>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
