Minor changes to thumbnail

--- a/src/index.html
+++ b/src/index.html
@@ -26,19 +26,19 @@
                             <img class="w-4/5 object-cover py-16"
                                 src="">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
-                                <h5 class="text-2xl font-semibold">Tooni</h5>
+                                <h5 class="text-3xl font-semibold">Tooni</h5>
                                 <div class="flex flex-wrap gap-2">
                                     <thumbnail-pill>
-                                        <p class="text-sm text-wh">Founder</p>
+                                        <p class="text-sm text-bk">Founder</p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-wh">Fintech</p>
+                                        <p class="text-sm text-bk">Fintech</p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-wh">B2C</p>
+                                        <p class="text-sm text-bk">B2C</p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-wh">Personal Finance</p>
+                                        <p class="text-sm text-bk">Personal Finance</p>
                                     </thumbnail-pill>
                                 </div>
                             </div>
@@ -47,19 +47,19 @@
                             <img class="w-4/5 object-cover py-16"
                                 src="">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
-                                <h5 class="text-2xl font-semibold">Midaflow</h5>
+                                <h5 class="text-3xl font-semibold">Midaflow</h5>
                                 <div class="flex flex-wrap gap-2">
                                     <thumbnail-pill>
-                                        <p class="text-sm text-wh">Internship</p>
+                                        <p class="text-sm text-bk">Internship</p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-wh">Fintech</p>
+                                        <p class="text-sm text-bk">Fintech</p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-wh">B2B</p>
+                                        <p class="text-sm text-bk">B2B</p>
                                     </thumbnail-pill>
                                     <thumbnail-pill>
-                                        <p class="text-sm text-wh">ERP System</p>
+                                        <p class="text-sm text-bk">ERP System</p>
                                     </thumbnail-pill>
                                 </div>
                             </div>
