--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                     <div class="flex gap-8">
                         <a href class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
                             <img class="w-4/5 object-cover py-16"
-                                src="">
+                                src="../src/assets/thumbnail-tooni.png">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
                                 <h5 class="text-3xl font-semibold">Tooni</h5>
                                 <div class="flex flex-wrap gap-2">
@@ -45,7 +45,7 @@
                         </a>
                         <a href class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
                             <img class="w-4/5 object-cover py-16"
-                                src="">
+                                src="../src/assets/thumbnail-midaflow.png">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
                                 <h5 class="text-3xl font-semibold">Midaflow</h5>
                                 <div class="flex flex-wrap gap-2">
