Created rest of pages and change links to absolute

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../src/css/output.css" rel="stylesheet">
-    <link href="../src/css/globals.css" rel="stylesheet">
+    <link href="/src/css/output.css" rel="stylesheet">
+    <link href="/src/css/globals.css" rel="stylesheet">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <title>Brian Mac</title>
 </head>
@@ -70,6 +70,6 @@
         </div>
     </div>   
 
-    <script src="js/index.js" type="module"></script>
+    <script src="/src/js/index.js" type="module"></script>
 </body>
 </html>
