--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
                         </strong>                     
                     </h1>
                     <div class="flex gap-8">
-                        <a href class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
+                        <a href="/src/projects/tooni.html" class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
                             <img class="w-4/5 object-cover py-16"
-                                src="../src/assets/thumbnail-tooni.png">
+                                src="/src/assets/thumbnail-tooni.png">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
                                 <h5 class="text-3xl font-semibold">Tooni</h5>
                                 <div class="flex flex-wrap gap-2">
@@ -43,9 +43,9 @@
                                 </div>
                             </div>
                         </a>
-                        <a href class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
+                        <a href="/src/projects/midaflow.html" class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
                             <img class="w-4/5 object-cover py-16"
-                                src="../src/assets/thumbnail-midaflow.png">
+                                src="/src/assets/thumbnail-midaflow.png">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
                                 <h5 class="text-3xl font-semibold">Midaflow</h5>
                                 <div class="flex flex-wrap gap-2">
