--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -14,7 +14,7 @@
             <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6"></div>
             <div id="main" class="flex flex-col flex-1 mx-60 gap-8 py-6">
                 <h6 class="text-xl text-bk-48">An ERP system for small and medium-sized businesses</h6>
-                <div id="overview" class="flex flex-col gap-16 pt-6">
+                <div id="overview" class="flex flex-col gap-16 pt-8">
                     <h1 class="text-5xl font-semibold">Midaflow</h1>
                     <div class="flex justify-between">
                         <div class="flex flex-col flex-1 gap-16">
@@ -55,10 +55,27 @@
                                 Midaflow is an enterprise resource planning software system that helps small and medium-sized businesses manage their payments, invoices and vendors.
                                 <strong class="font-semibold text-bk-32">
                                     In July 2023, I joined Midaflow during their early stages of product development. In the short time that I have worked for Midaflow, I played a pivotal role in designing 
-                                    parts of the minimum viable product that secured us our first client.
+                                    key components of the minimum viable product that secured us our first client.
                                 </strong> 
                             </h4>
                         </div>
+                    </div>
+                </div>
+                <div id="snapshots" class="flex flex-col gap-16 pt-24">
+                    <div class="flex flex-col gap-4">
+                        <img class="aspect-w-16 aspect-h-9 bg-gy object-cover rounded-2xl" 
+                            src="">
+                        <p class="text-base text-bk-48">This is some text inside of a div block.</p>
+                    </div>
+                    <div class="flex flex-col gap-4">
+                        <img class="aspect-w-16 aspect-h-9 bg-gy object-cover rounded-2xl" 
+                            src="">
+                        <p class="text-base text-bk-48">This is some text inside of a div block.</p>
+                    </div>
+                    <div class="flex flex-col gap-4">
+                        <img class="aspect-w-16 aspect-h-9 bg-gy object-cover rounded-2xl" 
+                            src="">
+                        <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
                 </div>
             </div>
