--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -63,18 +63,21 @@
                 </div>
                 <div id="snapshots" class="flex flex-col gap-16 pt-24">
                     <div class="flex flex-col gap-4">
-                        <img class="aspect-w-16 aspect-h-9 bg-gy object-cover rounded-2xl" 
-                            src="">
+                        <banner-image 
+                            src="/src/assets/6513414b4bb9ffe9ed30bfed_Dashboard.webp">
+                        </banner-image>
                         <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
                     <div class="flex flex-col gap-4">
-                        <img class="aspect-w-16 aspect-h-9 bg-gy object-cover rounded-2xl" 
-                            src="">
+                        <banner-image 
+                            src="/src/assets/65134152dd1e12783ce996d9_Invoice.webp">
+                        </banner-image>
                         <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
                     <div class="flex flex-col gap-4">
-                        <img class="aspect-w-16 aspect-h-9 bg-gy object-cover rounded-2xl" 
-                            src="">
+                        <banner-image 
+                            src="/src/assets/651b0be51104dbed23b2c251_Vendor Details.webp">
+                        </banner-image>
                         <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
                 </div>
