Added individual directories for assets

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -64,19 +64,19 @@
                 <div id="snapshots" class="flex flex-col gap-16 pt-24">
                     <div class="flex flex-col gap-4">
                         <banner-image 
-                            src="/src/assets/6513414b4bb9ffe9ed30bfed_Dashboard.webp">
+                            src="/src/assets/midaflow/2.png">
                         </banner-image>
                         <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
                     <div class="flex flex-col gap-4">
                         <banner-image 
-                            src="/src/assets/65134152dd1e12783ce996d9_Invoice.webp">
+                            src="/src/assets/midaflow/65134152dd1e12783ce996d9_Invoice.webp">
                         </banner-image>
                         <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
                     <div class="flex flex-col gap-4">
                         <banner-image 
-                            src="/src/assets/651b0be51104dbed23b2c251_Vendor Details.webp">
+                            src="/src/assets/midaflow/651b0be51104dbed23b2c251_Vendor Details.webp">
                         </banner-image>
                         <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
