--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -64,7 +64,7 @@
                 <div id="snapshots" class="flex flex-col gap-16 pt-24">
                     <div class="flex flex-col gap-4">
                         <banner-image 
-                            src="/src/assets/midaflow/2.png">
+                            src="/src/assets/midaflow/6513414b4bb9ffe9ed30bfed_Dashboard.webp">
                         </banner-image>
                         <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
