--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -20,44 +20,44 @@
                         <div class="flex flex-col flex-1 gap-16">
                             <div class="flex flex-col gap-2">
                                 <h6 class="text-xl text-bk-48">Timeframe</h6>
-                                <h4 class="text-3xl font-semibold">July 2023 — December 2023</h4>
+                                <h3 class="text-3xl font-semibold">July 2023 — December 2023</h3>
                             </div>
                             <div class="flex flex-col gap-2">
                                 <h6 class="text-xl text-bk-48">Role</h6>
-                                <h4 class="text-3xl font-semibold">Product Design Intern</h4>
+                                <h3 class="text-3xl font-semibold">Product Design Intern</h3>
                             </div>
                             <div class="flex flex-col gap-2">
                                 <h6 class="text-xl text-bk-48">Team</h6>
                                 <div class="flex flex-col">
-                                    <h4 class="text-3xl font-semibold">Anthony Reyes</h4>
+                                    <h3 class="text-3xl font-semibold">Anthony Reyes</h3>
                                     <h6 class="text-lg text-bk-48">Project Lead</h6>
                                 </div>
                                 <div class="flex flex-col pt-4">
-                                    <h4 class="text-3xl font-semibold">Stella He</h4>
+                                    <h3 class="text-3xl font-semibold">Stella He</h3>
                                     <h6 class="text-lg text-bk-48">Product Design Intern</h6>
                                 </div>
                                 <div class="flex flex-col pt-4">
-                                    <h4 class="text-3xl font-semibold">NG Kao</h4>
+                                    <h3 class="text-3xl font-semibold">NG Kao</h3>
                                     <h6 class="text-lg text-bk-48">Software Development Intern</h6>
                                 </div>
                                 <div class="flex flex-col pt-4">
-                                    <h4 class="text-3xl font-semibold">Jonathan Gorbachev</h4>
+                                    <h3 class="text-3xl font-semibold">Jonathan Gorbachev</h3>
                                     <h6 class="text-lg text-bk-48">Software Development Intern</h6>
                                 </div>
                                 <div class="flex flex-col pt-4">
-                                    <h4 class="text-3xl font-semibold">Nishith Fernando</h4>
+                                    <h3 class="text-3xl font-semibold">Nishith Fernando</h3>
                                     <h6 class="text-lg text-bk-48">Software Development Intern</h6>
                                 </div>                            
                             </div>
                         </div>
                         <div class="flex-1">
-                            <h4 class="text-3xl font-semibold">
+                            <h3 class="text-3xl font-semibold">
                                 Midaflow is an enterprise resource planning software system that helps small and medium-sized businesses manage their payments, invoices and vendors.
                                 <strong class="font-semibold text-bk-32">
                                     In July 2023, I joined Midaflow during their early stages of product development. In the short time that I have worked for Midaflow, I played a pivotal role in designing 
                                     key components of the minimum viable product that secured us our first client.
                                 </strong> 
-                            </h4>
+                            </h3>
                         </div>
                     </div>
                 </div>
@@ -80,6 +80,9 @@
                         </banner-image>
                         <p class="text-base text-bk-48">This is some text inside of a div block.</p>
                     </div>
+                </div>
+                <div id="context" class="flex flex-col gap-16 pt-24">
+                    <h2 class="text-4xl font-semibold">What is enterprise resource planning?</h2>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
