Added intro paragraph to context

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -83,6 +83,17 @@
                 </div>
                 <div id="context" class="flex flex-col gap-16 pt-24">
                     <h2 class="text-4xl font-semibold">What is enterprise resource planning?</h2>
+                    <h3 class="text-3xl font-semibold">
+                        Enterprise resource planning (ERP) 
+                        <strong class="font-semibold text-bk-32">
+                            is a comprehensive software system designed to  
+                        </strong>
+                        integrate and streamline various aspects of an organization's core business activities.
+                        <strong class="font-semibold text-bk-32">
+                            It serves as a centralized hub that connects different departments and functions within the organization such as:
+                        </strong>
+                        
+                    </h3>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
