Reworked fonts, classes applied globally

--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,19 @@
             <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6"></div>
             <div id="main" class="flex-1 ml-60">
                 <div class="flex flex-col gap-8 py-6">
-                    <h6 class="text-xl">Co-Founder & Product Designer at Tooni</h6>
-                    <h1 class="text-5xl font-semibold pt-8 pb-24">
+                    <h5>Co-Founder & Product Designer at Tooni</h5>
+                    <h1 class="pt-8 pb-24">
                         I design products, interfaces, & experiences.
-                        <strong class="font-semibold text-bk-32">
+                        <strong class="text-bk-32">
                             Combining creativity with user-centric design principles to craft products that captivate users and elevate their digital experience.
                         </strong>                     
                     </h1>
                     <div class="flex gap-8">
                         <a href="/src/projects/tooni.html" class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
                             <img class="w-4/5 object-cover py-16"
-                                src="/src/assets/thumbnail/thumbnail-tooni.png">
+                                src="/src/assets/thumbnails/thumbnail-tooni.png">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
-                                <h5 class="text-3xl font-semibold">Tooni</h5>
+                                <h3>Tooni</h3>
                                 <div class="flex flex-wrap gap-2">
                                     <thumbnail-pill>
                                         <p class="text-sm text-bk">Founder</p>
@@ -45,9 +45,9 @@
                         </a>
                         <a href="/src/projects/midaflow.html" class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
                             <img class="w-4/5 object-cover py-16"
-                                src="/src/assets/thumbnail/thumbnail-midaflow.png">
+                                src="/src/assets/thumbnails/thumbnail-midaflow.png">
                             <div class="flex flex-col gap-4 w-full px-12 pb-12">
-                                <h5 class="text-3xl font-semibold">Midaflow</h5>
+                                <h3>Midaflow</h3>
                                 <div class="flex flex-wrap gap-2">
                                     <thumbnail-pill>
                                         <p class="text-sm text-bk">Internship</p>
