--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -13,47 +13,47 @@
         <div class="flex relative">
             <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6"></div>
             <div id="main" class="flex flex-col flex-1 mx-60 gap-8 py-6">
-                <h6 class="text-xl text-bk-48">An ERP system for small and medium-sized businesses</h6>
+                <h5 class="text-bk-48">An ERP system for small and medium-sized businesses</h5>
                 <div id="overview" class="flex flex-col gap-16 pt-8">
-                    <h1 class="text-5xl font-semibold">Midaflow</h1>
+                    <h1>Midaflow</h1>
                     <div class="flex justify-between">
                         <div class="flex flex-col flex-1 gap-16">
                             <div class="flex flex-col gap-2">
-                                <h6 class="text-xl text-bk-48">Timeframe</h6>
-                                <h3 class="text-3xl font-semibold">July 2023 — December 2023</h3>
+                                <h5 class="text-bk-48">Timeframe</h5>
+                                <h3>July 2023 — December 2023</h3>
                             </div>
                             <div class="flex flex-col gap-2">
-                                <h6 class="text-xl text-bk-48">Role</h6>
-                                <h3 class="text-3xl font-semibold">Product Design Intern</h3>
+                                <h5 class="text-bk-48">Role</h5>
+                                <h3>Product Design Intern</h3>
                             </div>
                             <div class="flex flex-col gap-2">
-                                <h6 class="text-xl text-bk-48">Team</h6>
+                                <h5 class="text-bk-48">Team</h5>
                                 <div class="flex flex-col">
-                                    <h3 class="text-3xl font-semibold">Anthony Reyes</h3>
-                                    <h6 class="text-lg text-bk-48">Project Lead</h6>
+                                    <h3>Anthony Reyes</h3>
+                                    <h6 class="text-bk-48">Project Lead</h6>
                                 </div>
                                 <div class="flex flex-col pt-4">
-                                    <h3 class="text-3xl font-semibold">Stella He</h3>
-                                    <h6 class="text-lg text-bk-48">Product Design Intern</h6>
+                                    <h3>Stella He</h3>
+                                    <h6 class="text-bk-48">Product Design Intern</h6>
                                 </div>
                                 <div class="flex flex-col pt-4">
-                                    <h3 class="text-3xl font-semibold">NG Kao</h3>
-                                    <h6 class="text-lg text-bk-48">Software Development Intern</h6>
+                                    <h3>NG Kao</h3>
+                                    <h6 class="text-bk-48">Software Development Intern</h6>
                                 </div>
                                 <div class="flex flex-col pt-4">
-                                    <h3 class="text-3xl font-semibold">Jonathan Gorbachev</h3>
-                                    <h6 class="text-lg text-bk-48">Software Development Intern</h6>
+                                    <h3>Jonathan Gorbachev</h3>
+                                    <h6 class="text-bk-48">Software Development Intern</h6>
                                 </div>
                                 <div class="flex flex-col pt-4">
-                                    <h3 class="text-3xl font-semibold">Nishith Fernando</h3>
-                                    <h6 class="text-lg text-bk-48">Software Development Intern</h6>
+                                    <h3>Nishith Fernando</h3>
+                                    <h6 class="text-bk-48">Software Development Intern</h6>
                                 </div>                            
                             </div>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-3xl font-semibold">
+                            <h3>
                                 Midaflow is an enterprise resource planning software system that helps small and medium-sized businesses manage their payments, invoices and vendors.
-                                <strong class="font-semibold text-bk-32">
+                                <strong class="text-bk-32">
                                     In July 2023, I joined Midaflow during their early stages of product development. In the short time that I have worked for Midaflow, I played a pivotal role in designing 
                                     key components of the minimum viable product that secured us our first client.
                                 </strong> 
@@ -66,34 +66,38 @@
                         <banner-image 
                             src="/src/assets/midaflow/6513414b4bb9ffe9ed30bfed_Dashboard.webp">
                         </banner-image>
-                        <p class="text-base text-bk-48">This is some text inside of a div block.</p>
+                        <p class="text-bk-48">This is some text inside of a div block.</p>
                     </div>
                     <div class="flex flex-col gap-4">
                         <banner-image 
                             src="/src/assets/midaflow/65134152dd1e12783ce996d9_Invoice.webp">
                         </banner-image>
-                        <p class="text-base text-bk-48">This is some text inside of a div block.</p>
+                        <p class="text-bk-48">This is some text inside of a div block.</p>
                     </div>
                     <div class="flex flex-col gap-4">
                         <banner-image 
                             src="/src/assets/midaflow/651b0be51104dbed23b2c251_Vendor Details.webp">
                         </banner-image>
-                        <p class="text-base text-bk-48">This is some text inside of a div block.</p>
+                        <p class="text-bk-48">This is some text inside of a div block.</p>
                     </div>
                 </div>
                 <div id="context" class="flex flex-col gap-16 pt-24">
-                    <h2 class="text-4xl font-semibold">What is enterprise resource planning?</h2>
-                    <h3 class="text-3xl font-semibold">
+                    <h2>What is enterprise resource planning?</h2>
+                    <h3>
                         Enterprise resource planning (ERP) 
-                        <strong class="font-semibold text-bk-32">
+                        <strong class="text-bk-32">
                             is a comprehensive software system designed to  
                         </strong>
                         integrate and streamline various aspects of an organization's core business activities.
-                        <strong class="font-semibold text-bk-32">
+                        <strong class="text-bk-32">
                             It serves as a centralized hub that connects different departments and functions within the organization such as:
-                        </strong>
-                        
+                        </strong> 
                     </h3>
+                    <img src="/src/assets/midaflow/Context.svg">
+                    <h3>
+                        Test
+                    </h3>
+
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
