Completed context section for Midaflow

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -95,9 +95,21 @@
                     </h3>
                     <img src="/src/assets/midaflow/Context.svg">
                     <h3>
-                        Test
+                        The founders of Midaflow saw a gap in the market.
+                        <strong class="text-bk-32">
+                            Predominantly, ERP software systems were only accessible to large organizations with the resources to afford 
+                            such a comprehensive enterprise solution.
+                        </strong>
+                        They believed that ERP software systems should be more accessible and easy-to-use for small and medium-sized businesses. 
+                        For Midaflow, they focused
+                        <strong class="text-bk-32">
+                            their efforts on the financial aspects of an ERP software system, specifically focusing
+                        </strong>
+                        on Finance & Accounting, Analytics & Reporting, and Purchasing.
                     </h3>
-
+                </div>
+                <div id="research" class="flex flex-col gap-16 pt-24">
+                    <h2>But what do I know about enterprise resource planning?</h2>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
