--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -14,7 +14,7 @@
             <div id="nav" class="flex flex-col justify-between items-start fixed gap-4 h-screen w-1/8 py-6"></div>
             <div id="main" class="flex flex-col flex-1 mx-60 gap-8 py-6">
                 <h5 class="text-bk-48">An ERP system for small and medium-sized businesses</h5>
-                <div id="overview" class="flex flex-col gap-16 pt-8">
+                <div id="overview" class="flex flex-col gap-16 pt-8 pb-12">
                     <h1>Midaflow</h1>
                     <div class="flex justify-between">
                         <div class="flex flex-col flex-1 gap-16">
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="snapshots" class="flex flex-col gap-16 pt-24">
+                <div id="snapshots" class="flex flex-col gap-16 py-12">
                     <div class="flex flex-col gap-4">
                         <banner-image 
                             src="/src/assets/midaflow/6513414b4bb9ffe9ed30bfed_Dashboard.webp">
@@ -81,7 +81,7 @@
                         <p class="text-bk-48">This is some text inside of a div block.</p>
                     </div>
                 </div>
-                <div id="context" class="flex flex-col gap-16 pt-24">
+                <div id="context" class="flex flex-col gap-16 py-12">
                     <h2>What is enterprise resource planning?</h2>
                     <h3>
                         Enterprise resource planning (ERP) 
@@ -108,8 +108,24 @@
                         on Finance & Accounting, Analytics & Reporting, and Purchasing.
                     </h3>
                 </div>
-                <div id="research" class="flex flex-col gap-16 pt-24">
-                    <h2>But what do I know about enterprise resource planning?</h2>
+                <div id="research" class="flex flex-col gap-16 py-12">
+                    <h2>But what did I know about enterprise resource planning?</h2>
+                    <h3><strong class="text-bk-32">
+                            Not much, to be honest.
+                        </strong>
+                        Prior to Midaflow, I had no idea what an ERP software system even was. 
+                        <strong class="text-bk-32">
+                            This would have posed a significant challenge for me when designing for this system.
+                        </strong>
+                        However, I did notice some similarities between ERP software systems and Shopify<strong class="text-bk-32">, for which I do have extensive
+                        knowledge and experience in.</strong>
+                    </h3>
+                    <img src="/src/assets/midaflow/Research.svg">
+                    <h3>
+                        Both systems integrate and streamline various aspects of core business activities, and serve as a centralized hub for their organization.
+                        This comparison helped me understand the core concepts of an enterprise resource planning software system.
+                    </h3>
+                    <h2>What are their strengths and pitfalls?</h2>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
