Worked on research text

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,8 @@
             <div id="main" class="flex-1 ml-60">
                 <div class="flex flex-col gap-8 py-6">
                     <h5>Co-Founder & Product Designer at Tooni</h5>
-                    <h1 class="pt-8 pb-24">
-                        I design products, interfaces, & experiences.
-                        <strong class="text-bk-32">
-                            Combining creativity with user-centric design principles to craft products that captivate users and elevate their digital experience.
-                        </strong>                     
-                    </h1>
+                    <h1 class="pt-8 pb-24">I design products, interfaces, & experiences. <strong>Combining creativity with user-centric design principles 
+                        to craft products that captivate users and elevate their digital experience.</strong></h1>
                     <div class="flex gap-8">
                         <a href="/src/projects/tooni.html" class="flex flex-col flex-1 justify-start items-center rounded-2xl bg-gy">
                             <img class="w-4/5 object-cover py-16"
