--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -51,13 +51,10 @@
                             </div>
                         </div>
                         <div class="flex-1">
-                            <h3>
-                                Midaflow is an enterprise resource planning software system that helps small and medium-sized businesses manage their payments, invoices and vendors.
-                                <strong class="text-bk-32">
-                                    In July 2023, I joined Midaflow during their early stages of product development. In the short time that I have worked for Midaflow, I played a pivotal role in designing 
-                                    key components of the minimum viable product that secured us our first client.
-                                </strong> 
-                            </h3>
+                            <h3>Midaflow is an enterprise resource planning software system that helps small and medium-sized businesses manage their payments, 
+                                invoices and vendors. <strong>In July 2023, I joined Midaflow during their early stages of product development. In the short time 
+                                that I have worked for Midaflow, I played a pivotal role in designing key components of the minimum viable product that secured us 
+                                our first client.</strong></h3>
                         </div>
                     </div>
                 </div>
@@ -83,49 +80,34 @@
                 </div>
                 <div id="context" class="flex flex-col gap-16 py-12">
                     <h2>What is enterprise resource planning?</h2>
-                    <h3>
-                        Enterprise resource planning (ERP) 
-                        <strong class="text-bk-32">
-                            is a comprehensive software system designed to  
-                        </strong>
-                        integrate and streamline various aspects of an organization's core business activities.
-                        <strong class="text-bk-32">
-                            It serves as a centralized hub that connects different departments and functions within the organization such as:
-                        </strong> 
-                    </h3>
+                    <h3>Enterprise resource planning (ERP) <strong>is a comprehensive software system designed to</strong> integrate and streamline 
+                        various aspects of an organization's core business activities. <strong>It serves as a centralized hub that connects different 
+                        departments and functions within the organization such as:</strong></h3>
                     <img src="/src/assets/midaflow/Context.svg">
-                    <h3>
-                        The founders of Midaflow saw a gap in the market.
-                        <strong class="text-bk-32">
-                            Predominantly, ERP software systems were only accessible to large organizations with the resources to afford 
-                            such a comprehensive enterprise solution.
-                        </strong>
-                        They believed that ERP software systems should be more accessible and easy-to-use for small and medium-sized businesses. 
-                        For Midaflow, they focused
-                        <strong class="text-bk-32">
-                            their efforts on the financial aspects of an ERP software system, specifically focusing
-                        </strong>
-                        on Finance & Accounting, Analytics & Reporting, and Purchasing.
-                    </h3>
+                    <h3>The founders of Midaflow saw a gap in the market. <strong>Predominantly, ERP software systems were only accessible to large 
+                        organizations with the resources to afford such a comprehensive enterprise solution.</strong> They believed that ERP software 
+                        systems should be more accessible and easy-to-use for small and medium-sized businesses. For Midaflow, they focused <strong>
+                        their efforts on the financial aspects of an ERP software system, specifically focusing</strong> on Finance & Accounting, 
+                        Analytics & Reporting, and Purchasing.</h3>
                 </div>
                 <div id="research" class="flex flex-col gap-16 py-12">
                     <h2>But what did I know about enterprise resource planning?</h2>
-                    <h3><strong class="text-bk-32">
-                            Not much, to be honest.
-                        </strong>
-                        Prior to Midaflow, I had no idea what an ERP software system even was. 
-                        <strong class="text-bk-32">
-                            This would have posed a significant challenge for me when designing for this system.
-                        </strong>
-                        However, I did notice some similarities between ERP software systems and Shopify<strong class="text-bk-32">, for which I do have extensive
-                        knowledge and experience in.</strong>
-                    </h3>
+                    <h3><strong>Not much, to be honest.</strong> Prior to Midaflow, I had no idea what an ERP software system even was. 
+                        <strong>This would have posed a significant challenge for me when designing for this system.</strong>
+                        However, I did notice some similarities between ERP software systems and Shopify<strong>, for which I do have extensive
+                        knowledge and experience in.</strong></h3>
                     <img src="/src/assets/midaflow/Research.svg">
-                    <h3>
-                        Both systems integrate and streamline various aspects of core business activities, and serve as a centralized hub for their organization.
-                        This comparison helped me understand the core concepts of an enterprise resource planning software system.
-                    </h3>
-                    <h2>What are their strengths and pitfalls?</h2>
+                    <h3>Both systems integrate and streamline various aspects of core business activities, and serve as a centralized hub for their organization.
+                        <strong>This comparison helped me understand the core concept of an enterprise resource planning software system.</strong></h3>
+                    <h2>Learning what works and what doesn't</h2>
+                    <h3><strong>Given the project's time constraints and the extensive research already conducted by the founders, further research was not a priority. </strong>
+                        So in order for us interns to get a better idea on what could be improved, we conducted discovery research by analyzing user feedback 
+                        on our competitors. This allowed us to identify their strengths and weaknesses.</h3>
+                    <img src="/src/assets/midaflow/User Feedback.svg">
+                    <h3>Based on the feedback, we can see that users value a product that is easy-to-use and reliable. They appreciate intuitive designs tailored for 
+                        both end-users and administrators, as well as strong customer support. However, the wide range of features can overwhelm and confuse users, 
+                        and persistent issues with supplier integration despite support being the primary issues that require improvement.</h3>
+                    <h2>The lifecycle of an invoice at Midaflow</h2>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
