Increased the spacing between text sections (4rem to 6rem)

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -99,7 +99,7 @@
                     <img src="/src/assets/midaflow/Research.svg">
                     <h3>Both systems integrate and streamline various aspects of core business activities, and serve as a centralized hub for their organization.
                         <strong>This comparison helped me understand the core concept of an enterprise resource planning software system.</strong></h3>
-                    <h2>Learning what works and what doesn't</h2>
+                    <h2 class="pt-8">Learning what works and what doesn't</h2>
                     <h3><strong>Given the project's time constraints and the extensive research already conducted by the founders, further research was not a priority. </strong>
                         So in order for us interns to get a better idea on what could be improved, we conducted discovery research by analyzing user feedback 
                         on our competitors. This allowed us to identify their strengths and weaknesses.</h3>
@@ -107,7 +107,8 @@
                     <h3>Based on the feedback, we can see that users value a product that is easy-to-use and reliable. They appreciate intuitive designs tailored for 
                         both end-users and administrators, as well as strong customer support. However, the wide range of features can overwhelm and confuse users, 
                         and persistent issues with supplier integration despite support being the primary issues that require improvement.</h3>
-                    <h2>The lifecycle of an invoice at Midaflow</h2>
+                    <h2 class="pt-8">The lifecycle of an invoice at Midaflow</h2>
+                    <h3>Test</h3>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
