Templates for design section

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -108,10 +108,17 @@
                         both end-users and administrators, as well as strong customer support. However, a wide range of features can overwhelm and confuse users, 
                         and persistent issues with supplier integration despite regular support can be a major concern.</h3>
                     <h2 class="pt-8">The lifecycle of an invoice</h2>
-                    <h3>A key responsibility I had for this project was to design components for the lifecycle of an invoice. <strong>My only experience with invoices
+                    <h3>A key responsibility I had for this project was designing components for the lifecycle of an invoice. <strong>My only experience with invoices
                         was during my time running an eCommerce business where I regularly processed and paid invoices for goods purchased. Nothing too complex.</strong>
-                        However, I did not have any experience with the complete lifecycle of an invoice from both the end-user and issuer perspectives.
-                    </h3>
+                        However, I did not have any experience with the complete lifecycle of an invoice from both the end-user and issuer perspectives. <strong>Similar
+                        to my experience with ERP software systems, this would have posed a significant challenge when designing for this lifecycle.</strong>
+                        To address this, I mapped out and analyzed the entire invoice lifecycle, detailing the requirements and features for each stage.</h3>
+                    <h3>Lifecycle Image</h3>
+                    <h3>Lifecycle Result Placeholder</h3>
+                </div>
+                <div id="design" class="flex flex-col gap-16 py-12">
+                    <h2>Design Title Placeholder</h2>
+                    <h3>Design Intro Placeholder</h3>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
