Added class to feedback image

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -103,7 +103,7 @@
                     <h3><strong>Given the project's time constraints and the extensive research already conducted by the founders, further research was not a priority. </strong>
                         So in order for us interns to get a better idea on what could be improved, we conducted discovery research by analyzing user feedback 
                         on our competitors. This allowed us to identify common strengths and weaknesses.</h3>
-                    <img src="/src/assets/midaflow/User Feedback.svg">
+                    <img src="/src/assets/midaflow/User Feedback.svg" class="w-11/12 mx-auto">
                     <h3>Based on the feedback, we can see that users value a product that is easy-to-use and reliable. They appreciate intuitive designs tailored for 
                         both end-users and administrators, as well as strong customer support. However, a wide range of features can overwhelm and confuse users, 
                         and persistent issues with supplier integration despite regular support can be a major concern.</h3>
