--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -118,10 +118,11 @@
                 </div>
                 <div id="design" class="flex flex-col gap-16 py-12">
                     <h2>Now we're on to the good stuff</h2>
-                    <h3>A bit of background, due to the time constraints of the project we were tasked with designing the minimum viable product using the components from Chakra UI. 
-                        <strong>This meant that we were limited in what we could design and anything beyond that would have to follow the design system provided to a degree.</strong>
-                        Nevertheless, this is how I designed our components for the tasks I was assigned to.
-                    </h3>
+                    <h3>A bit of background, due to the time constraints of the project, we were tasked with designing the minimum viable product using the components from Chakra UI. 
+                        <strong>This limitation meant we could only design within the given design system up to a certain degree.</strong> Nevertheless, this is how I designed our 
+                        components for the tasks I was assigned to.</h3>
+                    <h3>Jira cards here?</h3>
+                    <h3>Jira task here: split in 30:70 - left side is jira card right side is flex-col with task, explanation, image?</h3>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
