Worked on design section

--- a/src/projects/midaflow.html
+++ b/src/projects/midaflow.html
@@ -121,8 +121,51 @@
                     <h3>A bit of background, due to the time constraints of the project, we were tasked with designing the minimum viable product using the components from Chakra UI. 
                         <strong>This limitation meant we could only design within the given design system up to a certain degree.</strong> Nevertheless, this is how I designed our 
                         components for the tasks I was assigned to.</h3>
-                    <h3>Jira cards here?</h3>
-                    <h3>Jira task here: split in 30:70 - left side is jira card right side is flex-col with task, explanation, image?</h3>
+                    <div class="flex flex-col gap-8">
+                        <div class="flex gap-8">
+                            <div class="flex flex-col flex-2 gap-8 p-8 bg-gy rounded-2xl">
+                                <div class="flex gap-4">
+                                    <p class="font-medium">Projects</p>
+                                    <p class="font-medium">/</p>
+                                    <div class="flex gap-2 items-center">
+                                        <img src="/src/assets/midaflow/65120e6af41c615d8778561a_Midaflow-p-800.png" class="w-5 h-5 bg-bk-16 rounded-md">
+                                        <p class="font-medium">Midaflow</p>    
+                                    </div>
+                                    <p class="font-medium">/</p>
+                                    <div class="flex gap-2 items-center">
+                                        <div class="flex w-5 h-5 rounded-md items-center justify-center bg-[#904ee2]">
+                                            <i class="ph-fill ph-lightning" style="color: #fff; font-size: 0.75rem;"></i>
+                                        </div>
+                                        <p class="font-medium">MID-1</p>
+                                    </div>       
+                                </div>
+                                <h3>Vendor Details</h3>
+                                <div class="flex flex-col gap-2">
+                                    <h5 class="font-semibold">Description</h5>
+                                    <h6>As a user, I should be able to:</h6>
+                                    <div class="flex gap-2 items-center">
+                                        <i class="ph-fill ph-circle" style="font-size: 0.5rem; padding: 0 0 0 1rem"></i>
+                                        <h6>access/manage my vendor's information</h6>
+                                    </div>
+                                    <div class="flex gap-2 items-center">
+                                        <i class="ph-fill ph-circle" style="font-size: 0.5rem; padding: 0 0 0 1rem"></i>
+                                        <h6>access my transaction history with a vendor</h6>
+                                    </div>
+                                </div>
+                                <div class="flex flex-col gap-2">
+                                    <h5 class="font-semibold">Stories in this epic</h5>
+                                    <div class="flex gap-4 it">
+                                        <div class="w-full h-4 bg-[#904ee2] rounded-full"></div>
+                                        <p class="whitespace-nowrap">100% Done</p>
+                                    </div>
+                                </div>
+                                <div class="flex flex-col gap-2">
+                                    
+                                </div>
+                            </div>
+                            <h3 class="flex-3">Explanation</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="project-nav" class="flex flex-col h-screen gap-4 py-6 fixed justify-center align-start w-1/8 px-8 top-0 bottom-0 right-0 left-auto"></div>
